cluster/apps/gitlab/gitlab/gitlab/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-webservice-internal
  namespace: gitlab
  annotations:
    cloudflare-operator.io/ignore: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - git.${BASE_DOMAIN}
  rules:
    - name: default-root
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 15s
        request: 15s
      backendRefs:
        - kind: Service
          name: gitlab-webservice-default
          port: 8181
          weight: 1
    - name: default-long-running
      matches:
        - path:
            type: RegularExpression
            value: ^/.*/ssh-receive-pack$
        - path:
            type: RegularExpression
            value: ^/.*/ssh-upload-pack$
      timeouts:
        backendRequest: 0s
        request: 0s
      backendRefs:
        - kind: Service
          name: gitlab-webservice-default
          port: 8181
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-webservice-external
  namespace: gitlab
  annotations:
    cloudflare-operator.io/type: CNAME
    cloudflare-operator.io/content: ${BASE_DOMAIN}
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - git.${BASE_DOMAIN}
  rules:
    - name: default-root
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 15s
        request: 15s
      backendRefs:
        - kind: Service
          name: gitlab-webservice-default
          port: 8181
          weight: 1
    - name: default-long-running
      matches:
        - path:
            type: RegularExpression
            value: ^/.*/ssh-receive-pack$
        - path:
            type: RegularExpression
            value: ^/.*/ssh-upload-pack$
      timeouts:
        backendRequest: 0s
        request: 0s
      backendRefs:
        - kind: Service
          name: gitlab-webservice-default
          port: 8181
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-registry
  namespace: gitlab
  annotations:
    cloudflare-operator.io/ignore: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - registry.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 900s
        request: 900s
      backendRefs:
        - kind: Service
          name: gitlab-registry
          port: 5000
          weight: 1
