cluster/apps/gitlab/gitlab/gitlab/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: gitlab-shell
  namespace: gitlab
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
      sectionName: ssh
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: ssh
  rules:
    - backendRefs:
        - name: gitlab-gitlab-shell
          port: 22
